--- a/src/main/webapp/game-account-registration.xhtml
+++ b/src/main/webapp/game-account-registration.xhtml
@@ -27,8 +27,8 @@
 	    		<f:ajax render="@form user-list" execute="@form user-list"/>
 	    	</h:commandButton>
 	    	
-	    	<h:outputText value="#{gameAccountRegistrationRequest.response}"></h:outputText>
-	    	<h:outputText value="#{errorResponse.message}"></h:outputText>
+	    	<h:outputText value="#{gameAccountRegistrationRequest.response}" styleClass="slow-fade-out"></h:outputText>
+	    	<h:outputText value="#{errorResponse.message}" styleClass="slow-fade-out"></h:outputText>
 	    </h:form>
     </h:body>
 </html>
