--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -40,7 +40,8 @@
     		</h:form>
     		
     		<h:panelGroup>
-    			<ui:include src="game-account-registration.xhtml" />
+    			<!--  <ui:include src="game-account-registration.xhtml" />  -->
+    			<h:link value="Need an account?" outcome="/game-account-registration.xhtml"/>
     		</h:panelGroup>
     		
     	</h:panelGroup>
