--- a/src/main/webapp/game-overview.xhtml
+++ b/src/main/webapp/game-overview.xhtml
@@ -8,7 +8,21 @@
       >
      
     <h:body >
-    	overview
+    	<h:panelGrid>
+			Dies ist die Abgabe-Version von Eternal-Stars.
+			Feature-Liste
+			<ul>
+				<li>Einloggen mit erstellen Benutzeraccounts</li>
+				<li>Registrierung neuer Accounts</li>
+				<li>Systemrollen: Anonym, Noraml, Admin</li>
+				<li>Die Rechte der Rollen könne vom [SYS_ADMIN] (pw: admin) nach dem einloggen geändert werden</li>
+				<li>Nutzer können ihren Planeten verbessern und to die Produktion erhöhen</li>
+				<li>Nutzer können ihren Anzeigenamen, Email und Passwort unter Accoutn ändern</li>
+				<li>Über die Galaxie können die Nachbarn des Nutzers betrachtet werden</li>
+				<li>Nutzer können von Admin gelöscht werden</li>
+				<li>Die aktuellen Resourcen werden nur bei Bau eines Gebäudes gespeichert</li>
+			</ul>    	
+    	</h:panelGrid>
     </h:body>
     
 </html>
