--- a/src/main/webapp/admin.xhtml
+++ b/src/main/webapp/admin.xhtml
@@ -5,6 +5,14 @@
       xmlns:f="http://java.sun.com/jsf/core"      
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets">
+      
+      <h:head>
+    	<h:outputStylesheet library="css" name="style.css"  />
+    	<h:outputStylesheet library="css" name="game.css"  />
+        <title>
+        	<h:outputText value="#{eternalStarApp.name}"></h:outputText>
+        </title>
+    </h:head>
 	
     <h:body>
     	<ui:include src="back-control.xhtml" />
