--- a/src/main/webapp/game-overview.xhtml
+++ b/src/main/webapp/game-overview.xhtml
@@ -20,7 +20,8 @@
 				<li>Nutzer können ihren Anzeigenamen, Email und Passwort unter Accoutn ändern</li>
 				<li>Über die Galaxie können die Nachbarn des Nutzers betrachtet werden</li>
 				<li>Nutzer können von Admin gelöscht werden</li>
-				<li>Die aktuellen Resourcen werden nur bei Bau eines Gebäudes gespeichert</li>
+				<li>Nutzer können untereinander Handel betreiben</li>
+				<li>Nutzer können untereinander Nachrichten ausstauschen</li>
 			</ul>    	
     	</h:panelGrid>
     </h:body>
