--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -21,7 +21,7 @@
         </title>
 	</h:head>
 	<h:body styleClass="page-wrapper">
-		<h:form prependId="false" styleClass="page-content">
+		<h:form prependId="false" styleClass="page-content" id="main-form">
 			<ui:include src="#{pageControl.currentView}" />
 		</h:form>
 		<ui:include src="footer.xhtml" />
