--- a/src/main/webapp/jsf/user/login.xhtml
+++ b/src/main/webapp/jsf/user/login.xhtml
@@ -27,9 +27,9 @@
 			</h:panelGroup>
 			
 			
-			<h:commandLink value="Login" action="#{interactionHandler.loginNEW(loginRequest)}" styleClass="login-submit">
+			<h:commandButton value="Login" action="#{interactionHandler.loginNEW(loginRequest)}" styleClass="login-submit">
 				<f:ajax execute="@form" render="@form"/>
-			</h:commandLink>
+			</h:commandButton>
 			
  			
  		
